--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
           <div class="btn-container">
                <button class="btn increase" onclick="increaseCounter()">+</button>
                <button class="btn decrease" onclick="decreaseCounter()">-</button>
+               <!-- <button class="btn increase" onclick="updateCounter(1)">+</button>
+               <button class="btn decrease" onclick="updateCounter(-1)">-</button> -->
                <button class="btn reset" onclick="resetCounter()">⟳</button>
           </div>
 
